[tool.poetry]
name = "pantos-common"
version = "2.1.0"
description = "Common code for Pantos off-chain components."
authors = ["Pantos GmbH <contact@pantos.io>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://pantos.io"
repository = "https://github.com/pantos-io/common"
packages = [
    { include = "pantos" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantos"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
web3 = {extras = ["tester"], version = "^6.5.0"}

[tool.poetry.group.lint.dependencies]
bandit = "1.7.5"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.0.1"
types-pyyaml = "6.0.12.10"
types-requests = "2.31.0.1"
yapf = "0.40.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"

[tool.poetry.dependencies]
python = "^3.10"
celery = "5.3.1"
Cerberus = "1.3.4"
Flask-RESTful = "0.3.10"
JSON-log-formatter = "0.5.2"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "6.5.0"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"
pycryptodome = "3.20.0"
hexbytes = "0.3.1"
semantic-version = "2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
